Aguns ajustes na api
